# linux-raw-vdso

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: unit-test.yml
defs/: aarch64.rs  arm.rs  loongarch64.rs  mips.rs  mips64.rs  powerpc.rs  powerpc64.rs  riscv.rs  s390x.rs  x32.rs  x86.rs  x86_64.rs
docker/: test.dockerfile
fake/: Makefile  aarch64.c  aarch64.map  arm.c  arm.map  loongarch64.c  loongarch64.map  mips.c  mips.map  powerpc.c  powerpc.map  powerpc64.c  powerpc64.map  riscv.c  riscv.map  s390x.c  s390x.map  x86.c  x86.map  x86_64.c  x86_64.map
macros/: Cargo.toml
macros/src/: generator.rs  lib.rs  parser.rs
scripts/: doc.sh  docker-create.sh  docker-shell.sh  docker-test.sh  install-rust.sh  install-targets.sh  install.sh  test.sh
src/: elf.rs  lib.rs  util.rs
src/arch/: aarch64.rs  arm.rs  generic.rs  loongarch.rs  loongarch64.rs  mips.rs  mips64.rs  powerpc.rs  powerpc64.rs  riscv.rs  s390x.rs  x32.rs  x86.rs  x86_64.rs
src/imp/: arch.rs  elf.rs  mod.rs
vdso-gen/: Cargo.toml
vdso-gen/src/: format.rs  generator.rs  lib.rs  main.rs
