[workspace]
exclude = ["vdso-gen"]

[package]
name = "linux-raw-vdso"
version = "0.0.1"
edition = "2018"

[features]
default = []

aarch64 = []
arm = []
loongarch64 = []
mips = []
powerpc = []
powerpc64 = []
riscv = []
s390x = []
x32 = []
x86 = []
x86_64 = []

all = [
  "aarch64",
  "arm",
  "generic",
  "loongarch64",
  "mips",
  "powerpc",
  "powerpc64",
  "riscv",
  "s390x",
  "x32",
  "x86",
  "x86_64",
]

[dependencies]
